apps/prometheus/prometheus-oauth2-proxy-ingress.yaml
# This is created along with prometheus's resources because its specific to the
# prometheus workflow. Any other service running in this project could do the same.
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: oauth2-proxy-prometheus
  namespace: ${namespace}
spec:
  tls:
    - hosts:
      - ${hostname}
      secretName: "${hostname}"
  rules:
  - host: ${hostname}
    http:
      paths:
      - backend:
          serviceName: oauth2-proxy
          servicePort: 4180
        path: /oauth2
